# clipora

./: App.xaml  App.xaml.cs  AppSettings.cs  Clipora.csproj  Clipora.slnx  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  Snippet.cs  SnippetStorage.cs  TrayIcon.cs  app.manifest  package-lock.json  package.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md
Clipora.Package/: Clipora.Package.wapproj  Package.appxmanifest
Properties/: launchSettings.json
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
