[package]
name = "clipora"
version = "1.0.0"
description = "Clipboard manager and snippet widget"
authors = ["EERIE"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the binary on Windows.
name = "clipora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

# In-app purchase (StoreKit) for the one-time unlock. macOS only here; the App
# Store build needs macOS 13+ for StoreKit 2.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-iap = "0.9"
